<resources>
    <string name="net_ip">121.171.247.110</string>

    <string name="app_name">자동차 가격 비교</string>
    <string name="a">엔카\n중형차\n7900000원</string>
    <string name="b">엔카\n중형차\n31490000원</string>
    <string name="c">엔카\n중형차\n9990000원</string>
    <string name="d">엔카\n준중형차\n1680000원</string>
    <string name="search_button">다양한 차량을 만나보세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="channel_name">A</string>
    <string name="channel_description">B</string>

    <string name="fcm_message">새로운 차량</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
</resources>